# ccminer-zp

./: Makefile.am  README.md  README.txt  ccminer-config-win.h  ccminer-config.h  ccminer-cuda80.vcxproj  ccminer-cuda80.vcxproj.filters  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  cuda_checkhash.cu  miner.h  util.cpp
Algo256/: cuda_keccak256.cu  keccak256.cu  zenprotocol.cu
sph/: keccak.c
